# sagetrac-mirror

./: .gitattributes  .gitignore  .gitlab-ci.yml  .homebrew-build-env  .test  .travis-build.sh  .travis.yml  COPYING.txt  GNUmakefile.am  INSTALL  LLT_class.sage  Makefile  Makefile.am  Pipfile.m4  README.md  TODO  Test.ipynb  autogen.sh  bootstrap  bootstrap-conda  commands_genera1  commands_genera2  commands_order10_p2impure  commands_order10pure  commands_order10pure_via5  commands_order12pure  commands_order14_p2impure  commands_order14impure  commands_order16impure  commands_order16pure  commands_order18pure  commands_order21_p3impure  commands_order24impure  commands_order2_0  commands_order2_41  commands_order2_impure  commands_order4impure  commands_order4pure  commands_order6pure  commands_order8pure  (+25 more)
sagedist/etc/: Makefile.am  dist.sh.in  env.sh.in
src/: .gitignore  .relint.yml  MANIFEST.in  Makefile  Makefile.am  Makefile.in  Pipfile  Pipfile.m4  README  README.txt  README_ps.txt  TODO  asdfghj.h  autogen.sh  bootstrap  bounded_series.patch  configure.ac  conftest.py  generate_py_source.mk  graph_diameter.h  module_list.py  pyproject.toml  pyproject.toml.m4  requirements.txt  sage_conf.py.in  setup.cfg  setup.cfg.m4  setup.py  tox.ini  warnings
src/Sage/newsfragments/: 22176.feature
src/c_lib/: .gitignore  INSTALL  Makefile.am  SConstruct  autogen.sh  configure.ac
src/c_lib/include/: Makefile.am  ZZ_pylong.h  convert.h  gmp_globals.h  gmp_or_mpir.h  gmpxx_or_mpirxx.h  interrupt.h  mpn_pylong.h  mpz_longlong.h  mpz_pylong.h  ntl_wrap.h
src/c_lib/src/: Makefile.am  interrupt.c  memory.c
src/doc/: .gitignore  Makefile.am  autogen.sh  configure.ac
src/doc/common/: CJKsupport.py  Makefile.am  build_options.py  build_options.py.in  builder.py  conf.py  custom-sphinx-build.py  multidocs.py  python.inv  sage_autodoc.py
src/ext/: Makefile.am  autogen.sh  configure.ac
src/ext/nbconvert/: rst_polymake.tpl
src/ext/shell/: .zshrc  README.txt  bashrc  kshrc  sage_prompt.sh
src/ext/threejs/: threejs_template.html
src/mac-app/: AppController.h  AppController.m  AppDelegate.h  AppDelegate.m  Makefile  Sage-Info.plist
src/pkgs/sage_conf/: .gitignore  sage_conf.py.in
src/pkgs/sage_conf-binary/: MANIFEST.in  README.rst  sage_conf.py.in  setup.cfg  setup.py
src/pkgs/sage_conf-pypi/: .gitignore  MANIFEST.in  README.rst  setup.py  tox.ini
src/pkgs/sage_conf-relocatable/: .gitignore  bin  pyproject.toml  sage_conf.py.in  sage_root_source  setup.py  tox.ini
src/pkgs/sage_root_built_in_dot_sage/: sage_conf.py.in  setup.cfg  setup.py
src/pkgs/sage_root_with_var_tmp_symlink/: MANIFEST.in  VERSION.txt  sage_root_source  setup.cfg  setup.py
src/sage/: .gitignore  Makefile.am  TODO  __init__.py  _import_hooks.py  all.py  all_cmdline.py  all_notebook.py  autogen.sh  common.mk  configure.ac  cythondep  env.py  env.py.in  env_config.py.in  module_list.py.in  setup.py.in
src/sage/algebras/: Makefile.am  affine_hecke_algebra.py  all.py  ariki_koike_modules.py  associated_graded.py  catalog.py  cdga.py  clifford_algebra.py  cluster_algebra.py  commutative_dga.py  compression_domain.py  divided_power_algebra.py  double_affine_hecke_algebra.py  equivariant_cohomology.py  exterior_algebra_groebner.pxd  exterior_algebra_groebner.pyx  finitely_presented_algebra.py  free_algebra.py  free_algebra_element.py  free_zinbiel_algebra.py  fusion_algebra.py  gbnp.py  group_algebra.py  group_algebra_new.py  hall_algebra.py  iwahori_hecke_algebra.py  jordan_algebra.py  lie_superalgebras.py  moseley.py  multiparameter_hecke_algebra.py  nil_coxeter_algebra.py  nil_hecke_algebra.py  orlik_solomon.py  pbw_algebra.py  quantum_divided_power_algebra.py  quantum_matrix_coordinate_algebra.py  quantum_shuffle_algebra.py  quaternion_algebra.py  schur_algebra.py  shuffle_algebra.py  (+14 more)
src/sage/arith/: S_unit_equation.py  all.py  beta_adic.pxd  beta_adic.pyx  draw.c  draw.h  functions.pxd  functions.pyx  hay_sdl.h  long.pxd  misc.py  multi_modular.pxd  multi_modular.pyx  numerical_approx.pxd  numerical_approx.pyx  power.pxd  power.pyx  relations.c  relations.h  srange.pyx
src/sage/calculus/: DifferentialAlgebra.pyx  Makefile.am  all.py  calculus.py  desolvers.py  functional.py  functions.py  integration.pyx  interpolators.pyx  ode.pyx  riemann.pyx  test_sympy.py  tests.py  var.pyx  wester.py
src/sage/categories/: Makefile.am  __init__.py  action.pxd  action.pyx  additive_groups.py  additive_magmas.py  additive_monoids.py  additive_semigroups.py  affine_derived_crystals.py  affine_weyl_groups.py  algebra_functor.py  algebra_ideals.py  algebra_modules.py  algebras.py  algebras_with_basis.py  all.py  associative_algebras.py  basic.py  bialgebras.py  bialgebras_with_basis.py  bidendriform_bialgebras.py  bimodules.py  category.py  category_cy_helper.pxd  category_cy_helper.pyx  category_o.py  category_singleton.pyx  category_types.py  category_with_axiom.py  category_with_axioms.py  classes_of_combinatorial_structures.py  classical_crystals.py  coalgebras.py  coalgebras_with_basis.py  combinatorial_polyhedral_sets.py  combinatorial_structures.py  commutative_additive_groups.py  commutative_additive_monoids.py  commutative_additive_semigroups.py  commutative_algebra_ideals.py  (+185 more)
src/sage/coding/: Makefile.am  abstract_code.py  ag_code.py  all.py  benchmark.py  binary_code.pxd  binary_code.pyx  channel.py  channel_constructions.py  channels_catalog.py  code_bounds.py  code_constructions.py  codes_catalog.py  databases.py  decoder.py  decoders_catalog.py  delsarte_bounds.py  encoder.py  encoders_catalog.py  gabidulin.py  goppa.py  goppa_code.py  grs.py  guava.py  linear_code.py  linear_rank_metric.py  low_rank_parity_check.py  mc_eliece_cryptosystem.py  patterson_decoder.py  punctured_code.py  rank_metric.py  reed_muller_code.py  ring_code.pyx  sd_codes.py
src/sage_docbuild/: __init__.py  build_options.py  conf.py  sphinxbuild.py
src/sage_setup/: clean.py  cython.py  cython_options.py  extensions.py  find.py  fpickle_setup.py  library_order.py  module_list.py  optional_extension.py  run_parallel.py
(+8669 files in other folders)
