# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
sageextdir = $(datadir)/sage/ext

sageextgapdir = $(sageextdir)/gap
sageextgap_DATA = \
    gap/sage.g \
    gap/console.g

sageextgapjoynerdir = $(sageextgapdir)/joyner
sageextgapjoyner_DATA = \
    gap/joyner/modular_crv_rr_sp.gap \
    gap/joyner/hurwitz_crv_rr_sp.gap

sageextpickle_jardir = $(sageextdir)/pickle_jar
sageextpickle_jar_DATA = \
    pickle_jar/pickle_jar.tar.bz2

sageextmagmadir = $(sageextdir)/magma
sageextmagma_DATA = \
    magma/spec

sageextmagmalatexdir = $(sageextmagmadir)/latex
sageextmagmalatex_DATA = \
    magma/latex/latex.spec \
    magma/latex/latex.m

sageextmagmauserdir = $(sageextmagmadir)/user
sageextmagmauser_DATA = \
    magma/user/foo.m

sageextmagmasagedir = $(sageextmagmadir)/sage
sageextmagmasage_DATA = \
    magma/sage/sage.spec \
    magma/sage/basic.m

sageextparidir = $(sageextdir)/pari
sageextparidokchitserdir = $(sageextparidir)/dokchitser
sageextparidokchitser_DATA = \
    pari/dokchitser/computel.gp \
    pari/dokchitser/ex-bsw \
    pari/dokchitser/ex-chgen \
    pari/dokchitser/ex-chqua \
    pari/dokchitser/ex-delta \
    pari/dokchitser/ex-eisen \
    pari/dokchitser/ex-gen2 \
    pari/dokchitser/ex-gen3 \
    pari/dokchitser/ex-gen4 \
    pari/dokchitser/ex-nf \
    pari/dokchitser/ex-shin \
    pari/dokchitser/ex-zeta \
    pari/dokchitser/ex-zeta2 \
    pari/dokchitser/testall

sageextparisimondir = $(sageextparidir)/simon
sageextparisimon_DATA = \
    pari/simon/resultant3.gp \
    pari/simon/ell.gp \
    pari/simon/ellQ.gp \
    pari/simon/qfsolve.gp

sageextparibuzzarddir = $(sageextparidir)/buzzard
sageextparibuzzard_DATA = \
    pari/buzzard/Tpprog.g \
    pari/buzzard/DimensionSk.g \
    pari/buzzard/genusn.g

sageextmaximadir = $(sageextdir)/maxima

sageextmaximauserdir = $(sageextmaximadir)/user
sageextmaximauser_DATA = \
    maxima/user/sin-plot.eps \
    maxima/user/zeta.eps

sageextmaximawillisdir = $(sageextmaximadir)/willis
sageextmaximawillis_DATA = \
    maxima/willis/topoly.lisp

sageextmaximamwrankdir = $(sageextmaximadir)/mwrank
sageextmaximamwrank_DATA = \
    mwrank/PRIMES

sageextimagesdir = $(sageextdir)/images
sageextimages_DATA = \
    images/evaluate_over.png \
    images/favicon.ico \
    images/corner.png \
    images/sagelogo.png \
    images/evaluate.png

sageextsingulardir = $(sageextdir)/singular
sageextsingular_DATA = \
    singular/rrbasis.lib \
    singular/sage.lib

EXTRA_DIST = $(DATA)
